# tinycoro

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  TODO
.github/workflows/: asan_clang_16.yml  asan_gcc_13.yml  clang.yml  clang_16.yml  cmake.yml  code_cov.yml  codecov_asan_gcc_13.yml  gcc:13.yml  gcc_13.yml  linux.yml  linux32.yml  macos.yml  msvc2019.yml  msvc_2022.yml  unit_tests.yml  windows.yml
curl_example/: CMakeLists.txt  README.md  easy.hpp  main.cpp  multi.hpp
curl_example/include/: CurlEasy.hpp  CurlMulti.hpp  Easy.hpp  Multi.hpp
example/: AggregateValue_example.h  AllOfAwait_example.h  AnyOfCoAwait_example.h  AnyOfDynamicVoid_example.h  AnyOfDynamic_example.h  AnyOfVoidException_example.h  AnyOfVoid_example.h  AnyOf_example.h  AsyncCallbackAwaiterCStyleVoid_example.h  AsyncCallbackAwaiterCStyle_example.h  AsyncCallbackAwaiterReturnValue.h  AsyncCallbackAwaiter_example.h  AsyncPulling_example.h  AutoEvent_example.h  BufferedChannel_example.h  CoYieldForTask_example.h  Common.h  CustomAwaiter.h  Exception_example.h  Generator_example.h  MoveOnlyValue_example.h  MultiMovedDynamicTasks_example.h  MultiMovedTasksDynamicVoid_example.h  MultiTaskDifferentValues_example.h  MultiTasksDynamic_example.h  MultiTasks_example.h  NestedException_example.h  NestedTask_example.h  ReturnValueTask_example.h  Semaphore_example.h  Sleep_example.h  SyncAwait_example.h  TaskView_example.h  UsageWithStopToken_example.h  VoidTask_example.h  example.cpp  example22.cpp
example/echo_server_example/: CMakeLists.txt  Readme.md  echo_server_main.cpp  echo_server_stress_test.py
example/echo_server_example2/: CMakeLists.txt  main.cpp
include/: AsyncCallbackAwaiter.hpp  Common.hpp  CoroTask.hpp  Future.hpp  Generator.hpp  InPlaceStorage.hpp  PackagedCoro.hpp  Scheduler.hpp  Storage.hpp  Wait.hpp
include/tinycoro/: AllocatorAdapter.hpp  AnyObject.hpp  AsyncAwaiter.hpp  AsyncCallbackAwaiter.hpp  AtomicPtrStack.hpp  AtomicQueue.hpp  AutoEvent.hpp  AwaiterHelper.hpp  Barrier.hpp  BitLock.hpp  BoundTask.hpp  BufferedChannel.hpp  CachelineAlign.hpp  CallOnce.hpp  Cancellable.hpp  CancellableSuspend.hpp  CancellationHandler.hpp  CashlineAlign.hpp  ChannelOpStatus.hpp  CoWait.hpp  CoWaitInline.hpp  Common.hpp  CoroTask.hpp  DetachedFuture.hpp  DetachedTask.hpp  Diagnostics.hpp  Dispatcher.hpp  DynamicStorage.hpp  Exception.hpp  Executor.hpp  Finally.hpp  FlipStack.hpp  FunctionUtils.hpp  Future.hpp  Generator.hpp  InlineAwait.hpp  IntrusiveObject.hpp  IntrusivePtr.hpp  Latch.hpp  LinkedPtrList.hpp  (+49 more)
scripts/: linux_build-32bit.sh
src/: Common.hpp  Future.hpp  Scheduler.hpp
test/: CMakeLists.txt
test/src/: Allocator.hpp  AllocatorAdapterTest.cpp  AsyncCallbackAwaiter_CStyle_test.cpp  AsyncCallbackAwaiter_test.cpp  AtomicPtrStack_test.cpp  AtomicQueue_test.cpp  AutoEvent_test.cpp  Barrier_test.cpp  BitLock_test.cpp  BoundTask_test.cpp  BufferedChannel_test.cpp  CallOnce_test.cpp  CancellableSuspend_test.cpp  Cancellablle_test.cpp  CoWaitInline_test.cpp  CoWait_test.cpp  Common_test.cpp  ConcurrentDispatcher_test.cpp  ConcurrentScheduler_test.cpp  DetachedTask_test.cpp  Dispatcher_test.cpp  DynamicStorage_test.cpp  Example_tests.cpp  Finally_test.cpp  FlipStack_test.cpp  Future_test.cpp  Generator_test.cpp  InlineAwait_test.cpp  InlineScheduler_test.cpp  InlineTask_test.cpp  IntrusivePtr_test.cpp  Latch_test.cpp  LinkedPtrList_test.cpp  LinkedPtrOrderedList.cpp  LinkedPtrOrderedList_test.cpp  LinkedPtrQueueAtomic_test.cpp  LinkedPtrQueue_doubleLinked_test.cpp  LinkedPtrQueue_test.cpp  LinkedPtrStack_doubleLinked_test.cpp  LinkedPtrStack_test.cpp  (+39 more)
test/src/mock/: CoroutineHandleMock.h  StorageTracer.h  TaskMock.hpp
